Fix issue with dropdown being cut off.

--- a/assets/mol3d-style.css
+++ b/assets/mol3d-style.css
@@ -107,6 +107,7 @@
 
 #mol3d-demo-dropdown {
     margin-top: 20px;
+    margin-bottom: 100px;
 }
 
 #mol3d-input-bgcolor {
